--- a/packages/app/src/i18n/locales/hi.json
+++ b/packages/app/src/i18n/locales/hi.json
@@ -25,7 +25,7 @@
   "settings.resetting": "रीसेट हो रहा है...",
   "settings.enableTranslation": "अनुवाद सक्षम करें",
   "settings.targetLanguage": "लक्ष्य भाषा",
-  "settings.tone": "टोन",
+  "settings.tone": "लेखन शैली",
   "settings.toneDeveloper": "डेवलपर",
   "settings.tonePersonal": "व्यक्तिगत",
   "settings.numeric": "संख्यात्मक",
@@ -101,7 +101,7 @@
   "billing.features.proCredits": "$3/माह मुफ़्त क्रेडिट शामिल",
   "billing.features.maxCredits": "$10/माह मुफ़्त क्रेडिट शामिल",
   "billing.features.stt": "Groq और Deepgram ट्रांसक्रिप्शन",
-  "billing.features.tone": "AI-उन्नत टोन और अनुवाद",
+  "billing.features.tone": "AI-उन्नत लेखन शैली और अनुवाद",
   "billing.features.addons": "संख्यात्मक और सूची प्रारूप ऐड-ऑन",
   "billing.features.proUpload": "10 MB तक ऑडियो अपलोड",
   "billing.features.maxUpload": "25 MB तक ऑडियो अपलोड",
@@ -134,7 +134,7 @@
     {
       "question": "डेवलपर मोड क्या है?",
       "answer": [
-        "डेवलपर मोड विशेष रूप से सॉफ्टवेयर इंजीनियरों के लिए बनी एक टोन सेटिंग है। सक्षम होने पर, Voca की AI कोड शब्दों, फ़ंक्शन नामों, लाइब्रेरी नामों और तकनीकी शब्दावली को पहचानती है — और उन्हें सामान्य शब्दों की तरह मानने के बजाय सही ढंग से ट्रांसक्राइब करती है।",
+        "डेवलपर मोड विशेष रूप से सॉफ्टवेयर इंजीनियरों के लिए बनी एक शैली सेटिंग है। सक्षम होने पर, Voca की AI कोड शब्दों, फ़ंक्शन नामों, लाइब्रेरी नामों और तकनीकी शब्दावली को पहचानती है — और उन्हें सामान्य शब्दों की तरह मानने के बजाय सही ढंग से ट्रांसक्राइब करती है।",
         "\"reakt use state hook\" बोलें और यह \"React useState hook\" लिखता है। \"nahbar component\" बोलें और यह \"navbar component\" लिखता है।",
         "बैकग्राउंड नॉइज़ कैंसिलेशन के साथ मिलकर, यह उन डेवलपर्स के लिए डिज़ाइन किया गया है जो वास्तविक वातावरण में काम करते हुए कोड कमेंट्स, डॉक्यूमेंटेशन या मैसेज डिक्टेट करते हैं।"
       ]
@@ -143,7 +143,7 @@
       "question": "कौन सी भाषाएँ समर्थित हैं?",
       "answer": [
         "Deepgram और Groq इंजनों के माध्यम से वाक् पहचान के लिए 35+ भाषाएँ।",
-        "टोन नियंत्रण के साथ AI-संचालित अनुवाद के लिए 100+ भाषाएँ — औपचारिक, अनौपचारिक या डेवलपर मोड।",
+        "शैली नियंत्रण के साथ AI-संचालित अनुवाद के लिए 100+ भाषाएँ — औपचारिक, अनौपचारिक या डेवलपर मोड।",
         "डेवलपर मोड स्वचालित रूप से कोड शब्दों और तकनीकी शब्दावली को पहचानता है, उन्हें अंग्रेज़ी में रखते हुए बाकी का स्वाभाविक रूप से अनुवाद करता है।"
       ]
     },
