feat(app): add customizable keyboard shortcuts with per-item toggle

--- a/packages/app/src/i18n/locales/de.json
+++ b/packages/app/src/i18n/locales/de.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Aufnahme starten / stoppen",
   "shortcuts.cancel": "Aufnahme abbrechen",
   "shortcuts.show": "Tastenkürzel anzeigen",
+  "shortcuts.change": "Ändern",
+  "shortcuts.pressKey": "Taste drücken...",
+  "shortcuts.conflict": "Diese Taste ist bereits einer anderen Aktion zugewiesen",
+  "settings.shortcuts": "Tastenkürzel",
   "overlay.processing": "Verarbeitung...",
   "overlay.timesUp": "Zeit abgelaufen",
   "overlay.recording": "Aufnahme",
