--- a/packages/app/src/i18n/locales/en.json
+++ b/packages/app/src/i18n/locales/en.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Start / Stop Recording",
   "shortcuts.cancel": "Cancel Recording",
   "shortcuts.show": "Show Shortcuts",
+  "shortcuts.change": "Change",
+  "shortcuts.pressKey": "Press a key...",
+  "shortcuts.conflict": "This key is already assigned to another action",
+  "settings.shortcuts": "Shortcuts",
   "overlay.processing": "Processing...",
   "overlay.timesUp": "Time's up",
   "overlay.recording": "Recording",
