--- a/packages/app/src/i18n/locales/es.json
+++ b/packages/app/src/i18n/locales/es.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Iniciar / Detener grabación",
   "shortcuts.cancel": "Cancelar grabación",
   "shortcuts.show": "Mostrar atajos",
+  "shortcuts.change": "Cambiar",
+  "shortcuts.pressKey": "Pulsa una tecla...",
+  "shortcuts.conflict": "Esta tecla ya está asignada a otra acción",
+  "settings.shortcuts": "Atajos",
   "overlay.processing": "Procesando...",
   "overlay.timesUp": "Se acabó el tiempo",
   "overlay.recording": "Grabando",
