--- a/packages/app/src/i18n/locales/fr.json
+++ b/packages/app/src/i18n/locales/fr.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Démarrer / Arrêter l'enregistrement",
   "shortcuts.cancel": "Annuler l'enregistrement",
   "shortcuts.show": "Afficher les raccourcis",
+  "shortcuts.change": "Modifier",
+  "shortcuts.pressKey": "Appuyez sur une touche...",
+  "shortcuts.conflict": "Cette touche est déjà attribuée à une autre action",
+  "settings.shortcuts": "Raccourcis",
   "overlay.processing": "Traitement...",
   "overlay.timesUp": "Temps écoulé",
   "overlay.recording": "Enregistrement",
