--- a/packages/app/src/i18n/locales/hi.json
+++ b/packages/app/src/i18n/locales/hi.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "रिकॉर्डिंग शुरू / बंद करें",
   "shortcuts.cancel": "रिकॉर्डिंग रद्द करें",
   "shortcuts.show": "शॉर्टकट दिखाएँ",
+  "shortcuts.change": "बदलें",
+  "shortcuts.pressKey": "कोई कुंजी दबाएँ...",
+  "shortcuts.conflict": "यह कुंजी पहले से किसी अन्य क्रिया को असाइन की गई है",
+  "settings.shortcuts": "शॉर्टकट",
   "overlay.processing": "प्रोसेस हो रहा है...",
   "overlay.timesUp": "समय समाप्त",
   "overlay.recording": "रिकॉर्डिंग",
