--- a/packages/app/src/i18n/locales/it.json
+++ b/packages/app/src/i18n/locales/it.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Avvia / Interrompi registrazione",
   "shortcuts.cancel": "Annulla registrazione",
   "shortcuts.show": "Mostra scorciatoie",
+  "shortcuts.change": "Cambia",
+  "shortcuts.pressKey": "Premi un tasto...",
+  "shortcuts.conflict": "Questo tasto è già assegnato a un'altra azione",
+  "settings.shortcuts": "Scorciatoie",
   "overlay.processing": "Elaborazione...",
   "overlay.timesUp": "Tempo scaduto",
   "overlay.recording": "Registrazione",
