--- a/packages/app/src/i18n/locales/ja.json
+++ b/packages/app/src/i18n/locales/ja.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "録音の開始 / 停止",
   "shortcuts.cancel": "録音をキャンセル",
   "shortcuts.show": "ショートカットを表示",
+  "shortcuts.change": "変更",
+  "shortcuts.pressKey": "キーを押してください...",
+  "shortcuts.conflict": "このキーは既に別のアクションに割り当てられています",
+  "settings.shortcuts": "ショートカット",
   "overlay.processing": "処理中...",
   "overlay.timesUp": "時間切れ",
   "overlay.recording": "録音中",
