--- a/packages/app/src/i18n/locales/ko.json
+++ b/packages/app/src/i18n/locales/ko.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "녹음 시작 / 중지",
   "shortcuts.cancel": "녹음 취소",
   "shortcuts.show": "단축키 표시",
+  "shortcuts.change": "변경",
+  "shortcuts.pressKey": "키를 누르세요...",
+  "shortcuts.conflict": "이 키는 이미 다른 동작에 할당되어 있습니다",
+  "settings.shortcuts": "단축키",
   "overlay.processing": "처리 중...",
   "overlay.timesUp": "시간 초과",
   "overlay.recording": "녹음 중",
