--- a/packages/app/src/i18n/locales/pt.json
+++ b/packages/app/src/i18n/locales/pt.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Iniciar / Parar gravação",
   "shortcuts.cancel": "Cancelar gravação",
   "shortcuts.show": "Mostrar atalhos",
+  "shortcuts.change": "Alterar",
+  "shortcuts.pressKey": "Pressione uma tecla...",
+  "shortcuts.conflict": "Esta tecla já está atribuída a outra ação",
+  "settings.shortcuts": "Atalhos",
   "overlay.processing": "Processando...",
   "overlay.timesUp": "Tempo esgotado",
   "overlay.recording": "Gravando",
