--- a/packages/app/src/i18n/locales/ru.json
+++ b/packages/app/src/i18n/locales/ru.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Начать / Остановить запись",
   "shortcuts.cancel": "Отменить запись",
   "shortcuts.show": "Показать горячие клавиши",
+  "shortcuts.change": "Изменить",
+  "shortcuts.pressKey": "Нажмите клавишу...",
+  "shortcuts.conflict": "Эта клавиша уже назначена другому действию",
+  "settings.shortcuts": "Горячие клавиши",
   "overlay.processing": "Обработка...",
   "overlay.timesUp": "Время вышло",
   "overlay.recording": "Запись",
