--- a/packages/app/src/i18n/locales/tr.json
+++ b/packages/app/src/i18n/locales/tr.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "Kaydı Başlat / Durdur",
   "shortcuts.cancel": "Kaydı İptal Et",
   "shortcuts.show": "Kısayolları Göster",
+  "shortcuts.change": "Değiştir",
+  "shortcuts.pressKey": "Bir tuşa basın...",
+  "shortcuts.conflict": "Bu tuş zaten başka bir işleme atanmış",
+  "settings.shortcuts": "Kısayollar",
   "overlay.processing": "İşleniyor...",
   "overlay.timesUp": "Süre doldu",
   "overlay.recording": "Kayıt",
