--- a/packages/app/src/i18n/locales/zh.json
+++ b/packages/app/src/i18n/locales/zh.json
@@ -51,6 +51,10 @@
   "shortcuts.startStop": "开始 / 停止录音",
   "shortcuts.cancel": "取消录音",
   "shortcuts.show": "显示快捷键",
+  "shortcuts.change": "更改",
+  "shortcuts.pressKey": "按下一个键...",
+  "shortcuts.conflict": "此键已分配给其他操作",
+  "settings.shortcuts": "快捷键",
   "overlay.processing": "处理中...",
   "overlay.timesUp": "时间到",
   "overlay.recording": "录音中",
